# Graduation-Project

./: .gitignore  AGENTS.md  GEMINI.md  compare_dp_mechanisms.py  dp_mechanisms.py  main.py  pyproject.toml  qwenvl_vmf.py  vmf_core.py
.ipynb_checkpoints/: README-checkpoint.md  compare_dp_mechanisms-checkpoint.py  compare_epsilon-checkpoint.py  inspect_model-checkpoint.py  qwenvl8b-checkpoint.py  qwenvl_vmf-checkpoint.py  test-checkpoint.py  vmf_core-checkpoint.py
asset/: qualitative_cases.md
data/: ablation_study.csv  cross_model_llava.csv  ms_coco_baseline.csv  ms_coco_results.csv  norm_stability.csv  vqa_v2_baseline.csv  vqa_v2_results.csv
docs/: eassy.md  gemini.md  low_aigc.md  main.tex  template.tex  vMF-ALL.docx  vMF-ALL.md  vMF-vs-切平面.md  vMF.md  ~$答辩.pptx  大纲.docx  大纲.md  答辩.md  陈凡-开题报告-面向视觉语言模型的语义保持度量隐私研究.docx  陈凡-毕业论文.docx  陈凡-毕业论文_副本.docx
examples/: qwenvl_demo.py
experiments/: compare_mechanisms.py  qwenvl_comparison.py
models/: __init__.py  qwenvl_wrapper.py
privacy/: __init__.py  gaussian.py  laplace.py  norm_preserving.py  vmf.py
scripts/: generate_demo_results.py  plot_dataset_metrics.py  plot_demo_results.py  plot_method_main_figure.py  plot_style.py  plot_supplementary_metrics.py  plot_vmf.py  validate_vmf_approximation.py
test-vmf/: analyze_vmf.py  vmf_perturbation.py
