[project]
name = "hnust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "modelscope>=1.34.0",
    "numpy>=2.4.2",
    "python-docx>=1.2.0",
    "scikit-learn>=1.8.0",
    "transformers>=5.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
